# bitnode

./: LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bitnode/: main.py  models.py  template.py
bitnode/templates/: dockerfile.py  index.html
